# Test-ClientServer

./: CMakeLists.txt  README.md  run.sh
client/: CMakeLists.txt  main.cpp
netlib/: CMakeLists.txt  netlib.cpp  netlib.h  netorder.h
server/: CMakeLists.txt  main.cpp
test/: client  run.sh  server
